tests/golden/type_errors/push_shadowed_call_non_function.cd
let push = 123;
push([], 1);
